fix: explicitly assign  item alignment for block-staff-article-item component for each theme

--- a/packages/vue-component-library/src/styles/ftva/_block-staff-article-item.scss
+++ b/packages/vue-component-library/src/styles/ftva/_block-staff-article-item.scss
@@ -1,6 +1,7 @@
 .ftva.block-staff-article-item {
   --image-min-width: 384px;
   --image-aspect-ratio: 4/3;
+  align-items: center;
 
   background-color: white;
 
